hphp/hack/test/decl/autoimport_in_namespace.php
<?hh

namespace {
  type A = Traversable<int>;
  type B = \Traversable<int>;

  namespace NS {
    type A = Traversable<int>;
    type B = \Traversable<int>;
  }
}
